# psem-twee

./: .gitignore  Cargo.toml  Makefile  README.md
src/: embed.rs  main.rs
web/: Makefile  index.html  package.json  vite.config.js
web/src/: App.vue  style.css
web/src/components/: Video.vue
