[package]
name = "twee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
video-rs = "0.5.0"
