[package]
name = "twee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.5.10", features = ["derive"] }
itertools = "0.12.0"
rust-embed = "8.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
